// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> should render BasicDialog when no message given 1`] = `
<ForwardRef
  classes={
    Object {
      "container": "ui-shared__dialog-modal",
    }
  }
>
  <Backdrop
    className=""
    color="#000"
    duration={200}
    isVisible={true}
    level={0}
    lockBodyScroll={true}
    onClick={[Function]}
    opacity={30}
  />
  <BasicDialog
    actions={Array []}
    title={null}
  />
</ForwardRef>
`;

exports[`<Dialog /> should render a special dialog 1`] = `
<ForwardRef
  classes={
    Object {
      "container": "ui-shared__dialog-modal",
    }
  }
>
  <Backdrop
    className=""
    color="#000"
    duration={200}
    isVisible={true}
    level={0}
    lockBodyScroll={true}
    onClick={[Function]}
    opacity={30}
  />
  <PipelineErrorDialog
    actions={Array []}
    message=""
    params={
      Object {
        "errorCode": "",
        "message": "",
        "pipeline": "",
        "request": Object {},
      }
    }
  />
</ForwardRef>
`;

exports[`<Dialog /> should render variant select dialog 1`] = `
<ForwardRef
  classes={
    Object {
      "container": "ui-shared__dialog-modal",
    }
  }
>
  <Backdrop
    className=""
    color="#000"
    duration={200}
    isVisible={true}
    level={0}
    lockBodyScroll={true}
    onClick={[Function]}
    opacity={30}
  />
  <VariantSelectModal
    actions={Array []}
    message="Test"
    params={
      Object {
        "productId": "product_1",
      }
    }
  />
</ForwardRef>
`;

exports[`<Dialog /> should render without props 1`] = `
<ForwardRef
  classes={
    Object {
      "container": "ui-shared__dialog-modal",
    }
  }
>
  <Backdrop
    className=""
    color="#000"
    duration={200}
    isVisible={true}
    level={0}
    lockBodyScroll={true}
    onClick={[Function]}
    opacity={30}
  />
  <TextMessageDialog
    actions={Array []}
    message="msg"
    params={Object {}}
    title={null}
  />
</ForwardRef>
`;
